force-app/main/default/objects/LASERCA__Employment__c/LASERCA__Employment__c.object-meta.xml
<CustomObject>
    <label>Employment</label>
    <nameField>
        
        <label>Employment Name</label>
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>Employments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>