force-app/main/default/objects/LASERCA__Employment__c/fields/LASERCA__Current_Employment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Current_Employment_Start_Date__c</fullName>
    <label>Current Employment Start Date</label>
    <type>Date</type>
</CustomField>