force-app/main/default/objects/LASERCA__Employment__c/fields/LASERCA__Employment_Position_Description__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Employment_Position_Description__c</fullName>
    <label>Employment Position Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>