force-app/main/default/objects/LASERCA__Employment__c/fields/LASERCA__State__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__State__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>