force-app/main/default/objects/LASERCA__Employment__c/fields/LASERCA__Street_Address__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Street_Address__c</fullName>
    <label>Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>